--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,10 @@
-@(message: String)
+@(form: play.api.data.Form[Bar])
 
-@main("Welcome to Play") {
+    @main("Welcome to Play 2.0") {
 
-    @play20.welcome(message)
+        @helper.form(action = routes.Application.addBar) {
+            @helper.inputText(form("name"))
+            <input type="submit"/>
+        }
 
-}
+    }
