--- a/app/views/bars.scala.html
+++ b/app/views/bars.scala.html
@@ -1,7 +1,9 @@
-@(bars: List[models.Bar])
+@(bars: String)
 
+@*
 <ul>
     @for(bar <- bars) {
         <li>@bar.id == @bar.name</li>
     }
-</ul>
+</ul>*@
+@bars
