List and Json representation for Bar's model

--- a/app/views/bars.scala.html
+++ b/app/views/bars.scala.html
@@ -1,9 +1,7 @@
-@(bars: String)
+@(bars: List[models.Bar])
 
-@*
 <ul>
     @for(bar <- bars) {
         <li>@bar.id == @bar.name</li>
     }
-</ul>*@
-@bars
+</ul>
